# simpleHelloGA

./: Makefile.in  README.md  autogen.sh  config.h.in  configure  configure.ac
src/: Makefile.am  Makefile.in  consts.h  ga.c  ga.h  gnuplot.c  gnuplot.h  main.c  utils.c  utils.h
