AM_CPPFLAGS = -DDEBUG
AM_CFLAGS = -O0 \
            -ggdb \
            -g3 \
            -Wall

bin_PROGRAMS = simpleHelloGA

simpleHelloGA_SOURCES =	main.c \
                        ga.h ga.c \
                        utils.h utils.c \
                        consts.h

simpleHelloGA_LDFLAGS = 
simpleHelloGA_LDADD =
